@@ -8,7 +8,7 @@ static const GdkPixdata fallback = {
   350, /* width */
   350, /* height */
   /* pixel_data: */
-  "\377(:_\377\377(:_\377\377(:_\377\377(:_\377\377(:_\377\311(:_\377\203"
+  (guchar *)"\377(:_\377\377(:_\377\377(:_\377\377(:_\377\377(:_\377\311(:_\377\203"
   "(:`\377\377):`\377\377):`\377\311):`\377\203(:`\377\216(:_\377\5(:`\377"
   "):`\377*;a\377*<a\377+<a\377\377+=b\377\377+=b\377\313+=b\377\5+<a\377"
   "*<a\377*;a\377):`\377(:`\377\212(:_\377\7):`\377*;a\377+=b\377,>c\377"
