@@ -8,7 +8,7 @@ static const GdkPixdata preview = {
   225, /* width */
   240, /* height */
   /* pixel_data: */
-  "\377\0\0\0\377\342\0\0\0\377\1\12\17\31\377\377\35*E\377\337\35*E\377"
+  (guchar*)"\377\0\0\0\377\342\0\0\0\377\1\12\17\31\377\377\35*E\377\337\35*E\377"
   "\3\25\36""2\377\0\0\0\377\17\25\"\377\377(:_\377\337(:_\377\3\35*E\377"
   "\0\0\0\377\17\25\"\377\203(:_\377\3):`\377*;a\377+<b\377\377+=b\377\323"
   "+=b\377\3*<b\377*;a\377):`\377\203(:_\377\3\35*E\377\0\0\0\377\17\25"
