@@ -1,5 +1,11 @@
 2007-11-28	Benedikt Meurer <benny@xfce.org>
 
+	* engines/simple/simple.c: Fix dialog layout. Bug #3287.
+	* engines/simple/fallback.h, engines/simple/preview.h: Shut up
+	  gcc.
+
+2007-11-28	Benedikt Meurer <benny@xfce.org>
+
 	* xfce4-session/xfce4-session.1: Apply patch from Alexander
 	  Toresson <alexander.toresson@gmail.com> to fix typos in
 	  the man page. Bug #3288.
